--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "todo_api",
+  "name": "object_recognition_api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node index.js"
+    "serve": "node index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
