--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node index.js",
-    "start": "node index.js"
+    "serve": "node index.js"
   },
   "author": "",
   "license": "ISC",
